--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/catardio/favicon.ico"/><link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="What the hell is catardo"/><link rel="apple-touch-icon" href="/catardio/logo192.png"/><link rel="manifest" href="/catardio/manifest.json"/><title>Catardio</title><script defer="defer" src="/catardio/static/js/main.44f11ef9.js"></script><link href="/catardio/static/css/main.efca86c0.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="What the hell is catardo" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <title>Catardio</title>
+    <script defer="defer" src="/static/js/main.44f11ef9.js"></script>
+    <link href="/static/css/main.efca86c0.css" rel="stylesheet" />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
